--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <!-- MY CSS -->
   </head>
   <body>
+    <div class="text-center py-5">
+      <input type="text" id="nome" />
+      <input type="number" id="kilometri" />
+      <select name="" id="eta">
+        <option value="maggiorenne">Maggiorenne</option>
+        <option value="minorenne" id="minore">Minorenne</option>
+        <option value="over65" id="over65">Over 65</option>
+      </select>
+      <input type="submit" />
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
