--- a/index.html
+++ b/index.html
@@ -33,14 +33,68 @@
   </head>
   <body>
     <div class="text-center py-5">
-      <input type="text" id="nome" />
-      <input type="number" id="kilometri" />
-      <select name="" id="eta">
-        <option value="maggiorenne">Maggiorenne</option>
-        <option value="minorenne" id="minore">Minorenne</option>
-        <option value="over65" id="over65">Over 65</option>
-      </select>
-      <input type="submit" />
+      <h2 class="text-white text-uppercase">
+        calcola il prezzo del tuo biglietto
+      </h2>
+      <div class="bg-white w-50 py-3 container rounded shadow mt-4">
+        <div class="row">
+          <div class="col">
+            <label for="nome" class="d-block mb-3">Nome Cognome</label>
+            <input type="text" id="nome" />
+          </div>
+          <div class="col">
+            <label for="nome" class="d-block mb-3">Km da percorrere</label>
+            <input type="number" id="kilometri" />
+          </div>
+          <div class="col">
+            <label for="nome" class="d-block mb-3">Fascia età</label>
+            <select name="" id="eta">
+              <option value="maggiorenne">Maggiorenne</option>
+              <option value="minorenne" id="minore">Minorenne</option>
+              <option value="over65" id="over65">Over 65</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="mt-5">
+          <button class="ad-btn text-uppercase rounded">Genera</button>
+          <button class="ad-btn text-uppercase rounded">Annulla</button>
+        </div>
+      </div>
+
+      <section>
+        <h2 class="text-white text-uppercase">il tuo biglietto</h2>
+        <div
+          class="bg-white w-50 p-3 container rounded shadow mt-4 text-align-left"
+        >
+          <h4 class="text-uppercase text-start fw-bolder">
+            dettaglio passegeri
+          </h4>
+          <table class="w-100 border-top border-bottom">
+            <thead>
+              <tr>
+                <th class="bg-secondary">
+                  <h4 class="fw-bolder">Nome Passeggero</h4>
+                  <p id="nome-passeggero" class="fw-bolder"></p>
+                </th>
+                <th class="altezza-table">offerta</th>
+                <th>Carrozza</th>
+                <th>Codice CP</th>
+                <th>Costo biglietto</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="mt-5">
+                <td class="bg-secondary"></td>
+                <td>biglietto Standard</td>
+                <td id="carrozza"></td>
+                <td id="codice"></td>
+                <td id="costo-biglietto"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
     </div>
     <script src="js/main.js"></script>
   </body>
