--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap Freelancer</title>
+    <title>Calcolo Biglietto Treno</title>
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -57,15 +57,19 @@
         </div>
 
         <div class="mt-5">
-          <button class="ad-btn text-uppercase rounded">Genera</button>
-          <button class="ad-btn text-uppercase rounded">Annulla</button>
+          <button class="ad-btn text-uppercase rounded" id="btn-genera">
+            Genera
+          </button>
+          <button class="ad-btn text-uppercase rounded" id="btn-annulla">
+            Annulla
+          </button>
         </div>
       </div>
 
-      <section>
+      <section class="d-none mt-4" id="sezione-calcolo">
         <h2 class="text-white text-uppercase">il tuo biglietto</h2>
         <div
-          class="bg-white w-50 p-3 container rounded shadow mt-4 text-align-left"
+          class="bg-white w-50 p-4 container rounded shadow mt-4 text-align-left"
         >
           <h4 class="text-uppercase text-start fw-bolder">
             dettaglio passegeri
@@ -75,9 +79,9 @@
               <tr>
                 <th class="bg-secondary">
                   <h4 class="fw-bolder">Nome Passeggero</h4>
-                  <p id="nome-passeggero" class="fw-bolder"></p>
+                  <p id="nome-passeggero" class="fw-bolder text-uppercase"></p>
                 </th>
-                <th class="altezza-table">offerta</th>
+                <th class="altezza-table">Offerta</th>
                 <th>Carrozza</th>
                 <th>Codice CP</th>
                 <th>Costo biglietto</th>
@@ -86,7 +90,7 @@
             <tbody>
               <tr class="mt-5">
                 <td class="bg-secondary"></td>
-                <td>biglietto Standard</td>
+                <td>Biglietto Standard</td>
                 <td id="carrozza"></td>
                 <td id="codice"></td>
                 <td id="costo-biglietto"></td>
