--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <input type="text" id="nome" />
           </div>
           <div class="col">
-            <label for="nome" class="d-block mb-3">Km da percorrere</label>
+            <label for="kilometri" class="d-block mb-3">Km da percorrere</label>
             <input type="number" id="kilometri" />
           </div>
           <div class="col">
-            <label for="nome" class="d-block mb-3">Fascia età</label>
+            <label for="eta" class="d-block mb-3">Fascia età</label>
             <select name="" id="eta">
               <option value="maggiorenne">Maggiorenne</option>
               <option value="minorenne" id="minore">Minorenne</option>
